syntax = "proto3";

package grpc;

// Mandatory imports.
import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/protos/smartnic.proto";
import "github.com/pensando/sw/api/meta.proto";
import "github.com/pensando/sw/venice/cmd/grpc/server/certificates/certapi/certificates.proto";

// --------------------------------- C L U S T E R -------------------------------------------------
service Cluster {
	rpc PreJoin (ClusterPreJoinReq)  returns (ClusterPreJoinResp) {};
	rpc Join (ClusterJoinReq)  returns (ClusterJoinResp) {};
	rpc Disjoin (ClusterDisjoinReq)  returns (ClusterDisjoinResp) {};
}

// A Venice cluster runs a service to issue X509 certificates to controllers and agents for mTLS.
// A node that joins the cluster bootstraps its CA with a signing key shared with other nodes.
// The signing key is transported in wrapped form from the node that initiates cluster formation
// to the node that is asked to join using the Elliptic Curve Diffie-Hellman (ECDH) protocol.
//
// This is the sequence of steps performed by initiation and joining node to transport the CA signing key:
// 1. Initiator generates EC key pair (Public1, Private1) and sends Public1 to joining node
// 2. Joining node generates an EC key pair (Public2, Private2) and sends Public2 to initiator node
// 3. Initiator node computes an AES key as AESKey = Private1 + Public2
// 4. Joining node computes the same AES key as AESKey = Private2 + Public1
// 5. Initiator node sends the signing key to joining node encrypted with AESKey
// 6. Joining node decrypts the signing key using AESKey and bootstraps the CA.

// Cluster PreJoin request
message ClusterPreJoinReq {
	string name = 1;
	string uuid = 2;
	string virtual_ip = 3;
	bytes transportKey = 4; // Initiator public key (step 1 in CA key transport sequence)
	repeated string ntpServers = 5; // Optional NTP servers to sync time to before cluster is formed
}

// Cluster PreJoin response
message ClusterPreJoinResp {
	string sw_version = 1;
	bytes transportKey = 2; // Joining node public key (step 2 in CA key transport sequence)
}

// Quorum member
message QuorumMember {
	uint64 id = 1;
	string name = 2;
	repeated string peer_urls = 3;
	repeated string client_urls = 4;
}

// Quorum configuration
message QuorumConfig {
	string id = 1;
	repeated QuorumMember quorum_members = 2;
}

// CA Bundle
message CertMgrBundle {
	bytes wrappedCaKey = 1;
	certapi.CaTrustChain caTrustChain = 2;
	certapi.TrustRoots trustRoots = 3;
}

// Cluster Join request
message ClusterJoinReq {
	string name = 1;
	string uuid = 2;
	string virtual_ip = 3;
	repeated string quorum_nodes = 4;
	QuorumConfig quorum_config = 5;
	repeated string NTPServers = 6;
	string node_id = 7;
	CertMgrBundle certMgrBundle = 8; // Bundle containing the CA signing key and related certificates (step 5)
}

// Cluster Join response
message ClusterJoinResp {

}
// Cluster Disjoin request
message ClusterDisjoinReq {
}

// Cluster Disjoin response
message ClusterDisjoinResp {
}

// --------------------------------- SmartNIC service APIs  -----------------------------------

// SmartNIC service APIs
// NMD on Naples will be the client of this APIs

service SmartNICRegistration {
	// Register NIC
	// - registers the NIC when the mode is switched from classic
	//   to managed mode
	rpc RegisterNIC (stream RegisterNICRequest) returns (stream RegisterNICResponse) {};
}

service SmartNICUpdates {
	// Update NIC
	// - updates the SmartNIC and associcated port attributes, status
	rpc UpdateNIC (UpdateNICRequest) returns (UpdateNICResponse) {};

	// Watcher for SmartNIC object updates
	rpc WatchNICs (api.ObjectMeta) returns (stream SmartNICEvent) {};

}

//            ------------------------
//             NIC ADMISSION SEQUENCE
//            ------------------------
//
//  NMD                                         CMD
//        -------- AdmissionRequest -------->
//
//        <----- AuthenticationRequest ------
//
//        ----- AuthenticationResponse ----->
//
//        <------- AdmissionResponse --------
//
// The entire sequence is executed using a single bi-dir streaming RPC.
// gRPC streaming calls allow only messages of a single type in each direction,
// so both RegisterNICRequest and RegisterNICResponse messages contain multiple
// sub-messages. Only one sub-message is used in any request or response;
// the others are supposed to be nil.

// NMD --> CMD
message NICAdmissionRequest {
	cluster.SmartNIC Nic    = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "nic,omitempty"];

	// Factory Certificate
	bytes Cert          = 2 [(gogoproto.jsontag) = "cert,omitempty"];

	// Cluster Certificate Signing Request
	bytes ClusterCertSignRequest = 3 [(gogoproto.jsontag) = "clusterCertSignRequest,omitempty"];
}

// CMD --> NMD
message AuthenticationRequest {
	// Challenge consists of a random nonce
	bytes Challenge = 1 [(gogoproto.jsontag) = "challenge,omitempty"];
}

// NMD --> CMD
message AuthenticationResponse {
	// Random string chosen by NMD to compute the response
	// Prevents chosen-plaintext attacks
	// Needed for verification of the signature
	bytes ClaimantRandom = 1 [(gogoproto.jsontag) = "claimantRandom,omitempty"];

	// Challenge response
	bytes ChallengeResponse = 2 [(gogoproto.jsontag) = "challengeResponse,omitempty"];
}

// CMD --> NMD
message NICAdmissionResponse {
	// Admission Status of NIC - string enum of cluster.SmartNICSpec.SmartNICPhase
	string Phase = 1 [(gogoproto.jsontag) = "phase,omitempty"];

	// Reason is an optional field. It is populated with reason
	// when there is an Admisison failure
	string Reason = 2 [(gogoproto.jsontag) = "reason,omitempty"];

  // --- Cluster Keys and Certificates -- populated when NIC is admitted ---

  // The certificate used to talk to other Venice and NAPLES components
  certapi.CertificateSignResp ClusterCert    = 3 [(gogoproto.jsontag) = "clusterCert,omitempty"];

  // The CA trust chain for the cluster certificate
  certapi.CaTrustChain CaTrustChain = 4 [(gogoproto.jsontag) = "caTrustChain,omitempty"];

  // Additional root certificates to trust
  certapi.TrustRoots TrustRoots = 5 [(gogoproto.jsontag) = "trustRoots,omitempty"];

  // Registration response may also contain a smartnic version to rollout to if non-empty.
  string RolloutVersion       = 6 [(gogoproto.jsontag) = "rolloutVersion,omitempty"];

}

// NIC Registration request (CMD --> NMD)
message RegisterNICRequest {
	// First message
	NICAdmissionRequest AdmissionRequest = 1 [(gogoproto.jsontag) = "admissionRequest,omitempty"];

	// Third message
	AuthenticationResponse AuthenticationResponse = 2 [(gogoproto.jsontag) = "authenticationResponse,omitempty"];
}

// NIC Registration response (NMD --> CMD)
message RegisterNICResponse {
	// Second message
	AuthenticationRequest AuthenticationRequest = 1 [(gogoproto.jsontag) = "authenticationRequest,omitempty"];

	// Fourth message
	NICAdmissionResponse AdmissionResponse = 2 [(gogoproto.jsontag) = "admissionResponse,omitempty"];
}

//// NIC UPDATES AND EVENTS

// Update NIC request
message UpdateNICRequest {

	// SmartNIC object
	cluster.SmartNIC Nic = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "nic,omitempty"];
}

// Update NIC response
message UpdateNICResponse {

	// SmartNIC object
	cluster.SmartNIC Nic = 1 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "nic,omitempty"];
}

// SmartNIC watch event
message SmartNICEvent {
	api.EventType EventType = 1 [(gogoproto.jsontag) = "eventType,omitempty"];
	cluster.SmartNIC  Nic       = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "nic,omitempty"];
}
